# PolarInterpolants

./: README.md
CoarseSimulation/: CMakeLists.txt  generateSymbolicDerivatives.py  helpers.py  main.cpp  readme.md  regularMeshGen.py  visualize.py
CoarseSimulation/libsim/: CommonIncludes.h  Element.cpp  Element.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Strains.cpp  Strains.h  Tools.cpp  Tools.h
CoarseSimulation/mesh/: T.csv  X.csv  Xdef.csv
CoarseSimulation/symStrains/: d2sym_adx2.inc  d2sym_cdx2.inc  d2sym_ddx2.inc  d2sym_k1dx2.inc  d2sym_k2dx2.inc  d2sym_sdx2.inc  dsym_adx.inc  dsym_cdx.inc  dsym_ddx.inc  dsym_k1dx.inc  dsym_k2dx.inc  dsym_sdx.inc  sym_a.inc  sym_c.inc  sym_d.inc  sym_k1.inc  sym_k2.inc  sym_s.inc
DataGeneration/: CMakeLists.txt  genBend.py  helpers.py  main.cpp  readme.md
DataGeneration/data/microstructures/mat1/: PBC.csv  T.csv  X.csv  genHexMesh.m
DataGeneration/data/microstructures/mat10/: PBC.csv  T.csv  X.csv  genHexMesh.m
DataGeneration/data/microstructures/mat11/: PBC.csv  T.csv  X.csv  genHexMesh.m
DataGeneration/data/microstructures/mat2/: PBC.csv  T.csv  X.csv  genHexMesh.m
DataGeneration/data/microstructures/mat3/: PBC.csv  T.csv  X.csv  genHexMesh.m
DataGeneration/data/microstructures/mat4/: PBC.csv  T.csv  X.csv  genHexMesh.m
DataGeneration/data/microstructures/mat5/: PBC.csv  T.csv  X.csv  genHexMesh.m
DataGeneration/data/microstructures/mat6/: PBC.csv  T.csv  X.csv  genHexMesh.m
DataGeneration/data/microstructures/mat7/: PBC.csv  T.csv  X.csv  genHexMesh.m
DataGeneration/data/microstructures/mat8/: PBC.csv  T.csv  X.csv  genHexMesh.m
DataGeneration/libsim/: CommonIncludes.h  Tools.cpp  Tools.h
DataGeneration/libsim/DataGen/: DataGeneration.cpp  DataGeneration.h
DataGeneration/libsim/Elements/: Hexahedron.cpp  Hexahedron.h  bend.inc
DataGeneration/libsim/Materials/: Tango.cpp  Tango.h
DataGeneration/libsim/Objects/: CenterOfMassEnergy.cpp  CenterOfMassEnergy.h  ElasticEnergy.cpp  ElasticEnergy.h  Solver.cpp  Solver.h
Fitting/: readme.md
(+34 files in other folders)
